Add ability to configure local configs as well

--- a/templates/config.conf.j2
+++ b/templates/config.conf.j2
@@ -1,7 +1,7 @@
 {% from "./macros.j2" import insert_dict %}
 # {{ ansible_managed }}
 
-{% for key, value in override.value.items() %}
+{% for key, value in config.value.items() %}
 {{ insert_dict(key, value) }}
 
 {% endfor %}
